// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Empty ListGroup snapshot 1`] = `
<ul
  className="list-group"
/>
`;

exports[`ListGroup with listGroupItems.length == 1 snapshot 1`] = `
<ul
  className="list-group"
>
  <li
    className="list-group-item"
  >
    Item 1
  </li>
</ul>
`;

exports[`ListGroup with listGroupItems.length > 1 snapshot 1`] = `
<ul
  className="list-group"
>
  <li
    className="list-group-item"
  >
    Item 1
  </li>
  <li
    className="list-group-item"
  >
    Item 2
  </li>
</ul>
`;
